Initial commit based on https://github.com/neoascetic/rawgithack

--- a/proxy.conf
+++ b/proxy.conf
@@ -1,13 +1,11 @@
-location ~* ^/.+/.+/.+/(.+/)*$ {
+location ~* ^(/+)?$ {
     rewrite ^(.*)/$ $1/index.html last;
 }
 
-location ~* ^/.+/.+/.+/.+\.(?<extension>[a-zA-Z0-9]+)$ {
+location ~* ^.+\.(?<extension>[a-zA-Z0-9]+)$ {
     if ($request_method != GET) {
         return 405;
     }
-
-    limit_req zone=rawgithack.throttling;
 
     # robots, go away!
     add_header X-Robots-Tag none;
@@ -15,18 +13,15 @@ location ~* ^/.+/.+/.+/.+\.(?<extension>[a-zA-Z0-9]+)$ {
     # to be able to resolve remote server name from a variable
     resolver 8.8.8.8;
 
+    set $gh_url https://raw.githubusercontent.com/ElixirRuhr/elixir.ruhr/$git_sha$uri;
+
     # if we do not know this extension, let's redirect
     if ($detect_content_type = '') {
-        return 302 https://$origin$request_uri;
+        return 302 $gh_url;
     }
 
-    # caching
-    proxy_cache_key "$origin$uri";
-    proxy_cache rawgithack.cache;
-    proxy_cache_valid any 3m;
-
     proxy_intercept_errors on;
-    proxy_pass https://$origin;
+    proxy_pass $gh_url;
 
     # we need to hide these headers in order to redefine them
     # if we don't, they will be set twice
@@ -39,6 +34,6 @@ location ~* ^/.+/.+/.+/.+\.(?<extension>[a-zA-Z0-9]+)$ {
     proxy_hide_header Access-Control-Allow-Origin;
 
     add_header Access-Control-Allow-Origin *;
-    add_header X-Githack-Cache-Status $upstream_cache_status;
+    add_header X-Rawgit-Cache-Status $upstream_cache_status;
     add_header Content-Type $detect_content_type$content_type_charset_string;
 }
