--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# rawgithack
+# rawgit
 
 # file extension to mime-type mapping
 # kind of workaround because nginx can detect mime-type only for local file
@@ -57,39 +57,10 @@ map $http_referer $referer_domain {
     ~^https?://(?<domain>[^/]+) $domain;
 }
 
-# servers configuration
-ssl_session_cache shared:SSL:1m;
-ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-ssl_certificate_key /etc/ssl/private/rawgithack/private.key;
-
-limit_req_zone $referer_domain$uri zone=rawgithack.throttling:10m rate=3r/s;
-proxy_cache_path /var/cache/nginx/rawgithack keys_zone=rawgithack.cache:30m;
-
-root rawgithack;
+root rawgit;
 
 server {
     listen 80;
-    listen 443 ssl http2;
-    server_name raw.githack.com;
-    ssl_certificate /etc/ssl/private/rawgithack/raw.githack.com.crt;
-    set $origin raw.githubusercontent.com;
-    include rawgithack/proxy.conf;
-}
-
-server {
-    listen 80;
-    listen 443 ssl http2;
-    server_name gist.githack.com;
-    ssl_certificate /etc/ssl/private/rawgithack/gist.githack.com.crt;
-    set $origin gist.githubusercontent.com;
-    include rawgithack/proxy.conf;
-}
-
-server {
-    listen 80;
-    listen 443 ssl http2;
-    server_name bb.githack.com;
-    ssl_certificate /etc/ssl/private/rawgithack/bb.githack.com.crt;
-    set $origin bitbucket.org;
-    include rawgithack/proxy.conf;
+    server_name ~^(?<git_sha>.*?)\.preview.;
+    include rawgit/proxy.conf;
 }
