Allow link directory omitting explicit index.html
Example: /meetups/001-where-to-start/ will fetch /meetups/001-where-to-start/index.html

--- a/proxy.conf
+++ b/proxy.conf
@@ -2,6 +2,10 @@ location ~* ^(/+)?$ {
     rewrite ^(.*)/$ $1/index.html last;
 }
 
+location ~* /$ {
+    rewrite ^(.*)/$ $1/index.html last;
+}
+
 location ~* ^.+\.(?<extension>[a-zA-Z0-9]+)$ {
     if ($request_method != GET) {
         return 405;
