Map proxy url prefix based on request uri
All images in `/images/galleries` are stored via Git LFS so have to
fetch them directly from `media.githubusercontent.com`

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,10 @@
 # rawgit
 
+map $request_uri $detect_proxy_url_prefix {
+    ~*^/images/galleries  https://media.githubusercontent.com/media/ElixirRuhr/elixir.ruhr;
+    default               https://raw.githubusercontent.com/ElixirRuhr/elixir.ruhr;
+}
+
 # file extension to mime-type mapping
 # kind of workaround because nginx can detect mime-type only for local file
 map $extension $detect_content_type {
