--- a/proxy.conf
+++ b/proxy.conf
@@ -17,7 +17,7 @@ location ~* ^.+\.(?<extension>[a-zA-Z0-9]+)$ {
     # to be able to resolve remote server name from a variable
     resolver 8.8.8.8;
 
-    set $gh_url https://raw.githubusercontent.com/ElixirRuhr/elixir.ruhr/$git_sha$uri;
+    set $gh_url $detect_proxy_url_prefix/$git_sha$uri;
 
     # if we do not know this extension, let's redirect
     if ($detect_content_type = '') {
